[package]
name = "oxtu-index"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", rev = "1cf906dc4087f06631820f13855e6b27bd21b972" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
base64 = "0.22.1"
rand = "0.8.5"
bincode = { version = "1.3.3" }
hex = "0.4.3"
bigdecimal = { version = "0.4", features = ["serde-json"] }

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
tracing-test.workspace = true
testcontainers.workspace = true
testcontainers-bitcoind.workspace = true
bitcoincore-rpc = "0.19.0"
