[package]
name = "testcontainers-bitcoind"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
testcontainers.workspace = true
bitcoincore-rpc = "0.19.0"

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-test.workspace = true
